# fct_qt_qml_dialog

./: CMakeLists.txt  README.md  main.cpp
build-firstDialog-Desktop_Qt_6_5_1_GCC_64bit-Debug/: CMakeCache.txt  appfirstDialog  build.ninja  cmake_install.cmake
build-firstDialog-Desktop_Qt_6_5_1_GCC_64bit-Debug/appfirstDialog_autogen/: deps  moc_predefs.h
build-firstDialog-Desktop_Qt_6_5_1_GCC_64bit-Debug/firstDialog/: Main.qml  appfirstDialog_qml_module_dir_map.qrc
build-firstDialog-Desktop_Qt_6_5_1_GCC_64bit-Debug/qmltypes/: appfirstDialog_foreign_types.txt
build-firstDialog-Desktop_Qt_6_5_2_GCC_64bit-Debug/: CMakeCache.txt  appfirstDialog  appfirstdialog_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-firstDialog-Desktop_Qt_6_5_2_GCC_64bit-Debug/appfirstDialog_autogen/: deps
build-firstDialog-Desktop_Qt_6_5_2_GCC_64bit-Debug/firstDialog/: Main.qml  appfirstDialog_qml_module_dir_map.qrc  qmldir
